# 3am-AI-nonsense

./: .clangd  .gitignore  CMakeLists.txt  README.md  client.cpp  commitgen.cpp  commitgen.h  server.cpp
